[tool.poetry]
name = "sunrisealarm"
version = "0.1.0"
description = "Python based sunrise alarm clock (Raspberry PI compatible)"
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
pigpio = "1.44"
py-flags = "1.1.2"
tinydb-serialization = "1.0.4"
Mako = "1.0.14"
tinydb = "3.13.0"

[tool.poetry.dev-dependencies]
pytest = "5.0.1"
pytest-cov = "2.7.1"
pytest-mock = "2.0.0"
coveralls = "1.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool:pytest]
adopts = "--cov=. --cov-report term" 