[tool.poetry]
name = "sunrisealarm"
version = "0.1.0"
description = "Python based sunrise alarm clock (Raspberry PI compatible)"
authors = ["mshafer1"]
license = "MIT"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term"

[tool.black]
line-length = 100
target-version = ['py36']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \_env3.7
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry.dependencies]
python = "^3.5"
pigpio = "1.44"
py-flags = "1.1.2"
tinydb-serialization = "1.0.4"
Mako = "1.0.14"
tinydb = "3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.7.1"
pytest-mock = "^2.0.0"
coveralls = "^1.8.2"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
